fix image gallery, avoid css overlap

--- a/themes/carlschirm/static/css/hugo-easy-gallery.css
+++ b/themes/carlschirm/static/css/hugo-easy-gallery.css
@@ -12,7 +12,7 @@ Grid Layout Styles
     margin: 10px;
     max-width: 1280px; /* originally: 768px */
 }
-.gallery .box {
+.gallery .imagebox {
     float: left;
     position: relative;
     /* Default: 1 tile wide */
@@ -21,21 +21,21 @@ Grid Layout Styles
 }
 @media only screen and (min-width : 365px) {
     /* Tablet view: 2 tiles */
-    .gallery .box {
+    .gallery .imagebox {
         width: 50%;
         padding-bottom: 50%;
     }
 }
 @media only screen and (min-width : 480px) {
     /* Small desktop / ipad view: 3 tiles */
-    .gallery .box {
+    .gallery .imagebox {
         width: 33.3%;
         padding-bottom: 33.3%; /*  */
     }
 }
 @media only screen and (min-width : 1280px) {
    /* Medium desktop: 4 tiles */
-   .box {
+    .gallery .imagebox {
       width: 25%;
       padding-bottom: 25%;
    }
